--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 //  "@angular/material/prebuilt-themes/azure-blue.css",
 @import "ts_material_theme.scss";
+@import "../assets/styles/partials/helpers";
 
 html,
 body {
